# cf-speedtest-v2

./: Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  wrangler.toml
assets/: 100mb.test  200mb.test  300mb.test  500mb.test
src/: lib.rs
